fix: exception